--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 			<li>원격 저장소</li>
 			<li>Push</li>
 			<li>Pull</li>
+			<li>협업</li>
+			<li>sync</li>
+			<li>Push.egoing</li>
 		</ul>
 	</body>
 </html>
